--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,13 @@ plugins {
 repositories {
     // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
+    mavenCentral()
     jcenter()
 }
 
 dependencies {
     // This dependency is used by the application.
-    implementation 'com.google.guava:guava:28.0-jre'
-
+    compile group: 'com.google.guava', name: 'guava', version: '23.5-jre'
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 }
